--- a/data/sources/ibm-developer-prague.yaml
+++ b/data/sources/ibm-developer-prague.yaml
@@ -131,8 +131,8 @@ series:
         dtstart: 2021-10-14 17:00:00+02:00
         dtend: 2021-10-14 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Oct 18, 2021, 12:00 PM: Let''s continue the conversation; build smart and build secure with the right tools and services by working with the world’s largest technical support provider for open sou'
-      og_title: Developer Festival
+      meta_description: 'Mon, Oct 18, 10:00 AM: Let''s continue the conversation; build smart and build secure with the right tools and services by working with the world’s largest technical support provider for open sour'
+      og_title: Developer Festival | Meetup
       image: https://secure.meetupstatic.com/photos/event/b/2/d/1/600_499485777.jpeg
       url: https://www.meetup.com/IBM-Developer-Prague/events/281430037/
       ical:
@@ -155,3 +155,27 @@ series:
         url: https://www.meetup.com/IBM-Developer-Prague/events/281430037/
         dtstart: 2021-10-18 12:00:00+02:00
         dtend: 2021-10-20 17:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Nov 18, 3:00 PM: 🌍Today everyone is talking about cloud-native services and you might ask yourself what does it really means? Why is it so popular? One of the major cloud-native services a'
+      og_title: Microservices and CloudNative Architecture:Key Use Cases and practical solutions | Meetup
+      url: https://www.meetup.com/IBM-Developer-Prague/events/281975947/
+      ical:
+        summary: Microservices and CloudNative Architecture:Key Use Cases and practical solutions
+        description: 'IBM Developer Czechia
+
+          Thursday, November 18 at 4:00 PM
+
+
+          ??Today everyone is talking about cloud-native services and you might ask yourself what does it really means? Why is it so popular? One of the major cl...
+
+
+          https://www.meetup.com/IBM-Developer-Prague/events/281975947/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_281975947@meetup.com
+        url: https://www.meetup.com/IBM-Developer-Prague/events/281975947/
+        dtstart: 2021-11-18 16:00:00+01:00
+        dtend: 2021-11-18 18:00:00+01:00
