--- a/data/sources/prague-ai.yaml
+++ b/data/sources/prague-ai.yaml
@@ -206,3 +206,28 @@ series:
         dtstart: 2021-11-16 16:00:00+01:00
         dtend: 2021-11-16 17:00:00+01:00
       image: https://secure.meetupstatic.com/photos/event/2/e/2/9/600_500111817.jpeg
+  - meetupcom:
+      meta_description: 'Wed, Dec 1, 2021, 10:00 AM: Machine-Learning can help every organisation solve the most challenging analytical problems, but complex systems and skills gaps can prevent organisations from exploiting i'
+      og_title: Accelerating Machine-Learning with Snowflake and H2O.ai
+      image: https://secure.meetupstatic.com/photos/event/7/2/d/f/600_500129407.jpeg
+      url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/281995999/
+      ical:
+        summary: Accelerating Machine-Learning with Snowflake and H2O.ai
+        description: 'Prague Artificial Intelligence & Deep Learning
+
+          Wednesday, December 1 at 10:00 AM
+
+
+          Machine-Learning can help every organisation solve the most challenging analytical problems, but complex systems and skills gaps can prevent organisat...
+
+
+          https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/281995999/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_281995999@meetup.com
+        url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/281995999/
+        dtstart: 2021-12-01 10:00:00+01:00
+        dtend: 2021-12-01 11:00:00+01:00
