--- a/data/sources/pipedrive-prague.yaml
+++ b/data/sources/pipedrive-prague.yaml
@@ -131,11 +131,11 @@ series:
         dtend: 2021-10-19 21:00:00+02:00
   - meetupcom:
       meta_description: 'Tue, Nov 16, 2021, 6:00 PM: Microservices are a popular and well-known architectural choice. Over time, best practices regarding implementing and maintaining this architectural style have evolved. In '
-      og_title: 'Backend Meetup: Advanced Microservices (online only)'
+      og_title: 'Backend Meetup: Advanced Microservices'
       image: https://secure.meetupstatic.com/photos/event/c/4/a/5/600_500150341.jpeg
       url: https://www.meetup.com/pipedrive-talks-prague/events/281095226/
       ical:
-        summary: 'Backend Meetup: Advanced Microservices (online only)'
+        summary: 'Backend Meetup: Advanced Microservices'
         description: 'Pipedrive Talks Prague
 
           Tuesday, November 16 at 6:00 PM
