--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -156,7 +156,7 @@ series:
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Nov 24, 2021, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program bude upřesněn.– 18:30 Úvodní slovo a novinky ze světa WordPres'
+      meta_description: 'Wed, Nov 24, 2021, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program– 18:30 Úvodní slovo a novinky ze světa WordPressu (Karolína Vy'
       og_title: 'WordPress Pivo #7'
       image: https://secure.meetupstatic.com/photos/event/6/5/4/f/600_499585935.jpeg
       url: https://www.meetup.com/naswp-cz/events/281507008/
@@ -166,7 +166,7 @@ series:
 
           Wednesday, November 24 at 6:30 PM\n
 
-          Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity. 📢 Program bude upřesněn. – 18:30 Úvodní slovo a no...
+          Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity. 📢 Program – 18:30 Úvodní slovo a novinky ze světa ...
 
 
           https://www.meetup.com/naswp-cz/events/281507008/'
@@ -179,3 +179,28 @@ series:
         url: https://www.meetup.com/naswp-cz/events/281507008/
         dtstart: 2021-11-24 18:30:00+01:00
         dtend: 2021-11-24 21:30:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Jan 26, 2022, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program bude upřesněn.– 18:30 Úvodní slovo a novinky ze světa WordPres'
+      og_title: 'WordPress Pivo #8'
+      image: https://secure.meetupstatic.com/photos/event/4/f/b/b/600_500180411.jpeg
+      url: https://www.meetup.com/naswp-cz/events/282061091/
+      ical:
+        summary: 'WordPress Pivo #8'
+        description: 'NášWP WordPress komunita
+
+          Wednesday, January 26 at 6:30 PM
+
+
+          Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity. 📢 Program bude upřesněn. – 18:30 Úvodní slovo a no...
+
+
+          https://www.meetup.com/naswp-cz/events/282061091/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_282061091@meetup.com
+        url: https://www.meetup.com/naswp-cz/events/282061091/
+        dtstart: 2022-01-26 18:30:00+01:00
+        dtend: 2022-01-26 21:30:00+01:00
