--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -104,3 +104,28 @@ series:
         url: https://www.meetup.com/the-social-programers/events/281669240/
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Nov 18, 2021, 7:00 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
+      og_title: Coding session V5
+      image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
+      url: https://www.meetup.com/the-social-programers/events/282078876/
+      ical:
+        summary: Coding session V5
+        description: 'The Social Programmers
+
+          Thursday, November 18 at 7:00 PM
+
+
+          Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.
+
+
+          https://www.meetup.com/the-social-programers/events/282078876/'
+        location: Kolektor (Dukelských Hrdinů 530/47, 170 00 Praha 7-Holešovice, Prague , Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_282078876@meetup.com
+        url: https://www.meetup.com/the-social-programers/events/282078876/
+        dtstart: 2021-11-18 19:00:00+01:00
+        dtend: 2021-11-18 21:00:00+01:00
