--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -105,7 +105,7 @@ series:
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Nov 18, 2021, 7:00 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
+      meta_description: 'Thu, Nov 18, 2021, 7:00 PM: Coding SessionLet''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a lapto'
       og_title: Coding session V5
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/282078876/
@@ -116,7 +116,7 @@ series:
           Thursday, November 18 at 7:00 PM
 
 
-          Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.
+          Coding Session Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just g...
 
 
           https://www.meetup.com/the-social-programers/events/282078876/'
