--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -204,3 +204,27 @@ series:
         url: https://www.meetup.com/naswp-cz/events/282061091/
         dtstart: 2022-01-26 18:30:00+01:00
         dtend: 2022-01-26 21:30:00+01:00
+  - meetupcom:
+      meta_description: 'Sat, Feb 26, 2022, 10:00 AM: Již po deváté pro vás připravujeme největší WordPress konferenci v ČR.Rádi se opět uvidíme se všemi, kterým WordPress přirostl k srdci.A je jedno, jestli se v něm teprve r'
+      og_title: WordCamp Praha 2022
+      image: https://secure.meetupstatic.com/photos/event/5/7/e/0/600_500302496.jpeg
+      url: https://www.meetup.com/naswp-cz/events/282169930/
+      ical:
+        summary: WordCamp Praha 2022
+        description: 'NášWP WordPress komunita
+
+          Saturday, February 26 at 10:00 AM\n
+
+          Již po deváté pro vás připravujeme největší WordPress konferenci v ČR.Rádi se opět uvidíme se všemi, kterým WordPress přirostl k srdci.A je jedno, jes...
+
+
+          https://www.meetup.com/naswp-cz/events/282169930/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_282169930@meetup.com
+        url: https://www.meetup.com/naswp-cz/events/282169930/
+        dtstart: 2022-02-26 10:00:00+01:00
+        dtend: 2022-02-26 18:00:00+01:00
