--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -154,3 +154,28 @@ series:
         url: https://www.meetup.com/TopMonks-Caffe/events/281672705/
         dtstart: 2021-11-02 19:00:00+01:00
         dtend: 2021-11-02 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Dec 7, 2021, 7:00 PM: Lze decentralizovat vlastnictví realit?'
+      og_title: Decentrializace vlastnictví realit
+      image: https://secure.meetupstatic.com/photos/event/3/c/3/2/600_500295410.jpeg
+      url: https://www.meetup.com/TopMonks-Caffe/events/282160838/
+      ical:
+        summary: Decentrializace vlastnictví realit
+        description: 'TopMonks Caffè
+
+          Tuesday, December 7 at 7:00 PM
+
+
+          Lze decentralizovat vlastnictví realit?
+
+
+          https://www.meetup.com/TopMonks-Caffe/events/282160838/'
+        location: Loft N8 Restaurant and Shisha Lounge (Nekázanka 883/8, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_282160838@meetup.com
+        url: https://www.meetup.com/TopMonks-Caffe/events/282160838/
+        dtstart: 2021-12-07 19:00:00+01:00
+        dtend: 2021-12-07 21:00:00+01:00
