--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -56,7 +56,7 @@ series:
         dtstart: 2021-11-10 18:00:00+01:00
         dtend: 2021-11-10 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Dec 8, 2021, 7:00 PM: Pomalu, ale jistě se nám blíží konec roku. Spolu s ním přichází i vánoční setkání Frontendisti.cz. Situace kolem koronaviru v ČR nám sice nedovolí uspořádat tradiční offline'
+      meta_description: 'Wed, Dec 8, 2021, 7:00 PM: Blíží konec roku a s ním vánoční setkání Frontendisti.cz. Situace kolem koronaviru v ČR nám sice nedovolí uspořádat tradiční offline sraz. My vám ale ukážeme, že si naše spo'
       og_title: Vánoční meetup Frontedisti.cz, Wed, Dec 8, 2021, 7:00 PM
       image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsyccqblb/
@@ -67,7 +67,7 @@ series:
           Wednesday, December 8 at 7:00 PM
 
 
-          Pomalu\, ale jistě se nám blíží konec roku. Spolu s ním přichází i vánoční setkání Frontendisti.cz. Situace kolem koronaviru v ČR nám sice nedovolí usp...
+          Blíží konec roku a s ním vánoční setkání Frontendisti.cz. Situace kolem koronaviru v ČR nám sice nedovolí uspořádat tradiční offline sraz. My vám ale ...
 
 
           https://www.meetup.com/frontendisti/events/280531796/'
