--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -131,8 +131,14 @@ series:
         dtstart: 2021-03-31 18:30:00+02:00
         dtend: 2021-03-31 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 27, 2021, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program (anotace níže):– 18:30 Úvodní slovo a novinky ze světa WordPre'
-      og_title: 'WordPress pivo #6'
+      meta_description: 'Wed, Oct 27, 4:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
+
+
+        📢 Program (anotace níže):
+
+
+        – 18:30 Úvodní slovo a novinky ze světa Wor'
+      og_title: 'WordPress pivo #6 | Meetup'
       image: https://secure.meetupstatic.com/photos/event/6/4/e/c/600_499585836.jpeg
       url: https://www.meetup.com/naswp-cz/events/281506962/
       ical:
@@ -156,8 +162,14 @@ series:
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Nov 24, 2021, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program– 18:30 Úvodní slovo a novinky ze světa WordPressu (Karolína Vy'
-      og_title: 'WordPress Pivo #7'
+      meta_description: 'Wed, Nov 24, 5:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
+
+
+        📢 Program
+
+
+        – 18:30 Úvodní slovo a novinky ze světa WordPressu (Karolín'
+      og_title: 'WordPress Pivo #7 | Meetup'
       image: https://secure.meetupstatic.com/photos/event/6/5/4/f/600_499585935.jpeg
       url: https://www.meetup.com/naswp-cz/events/281507008/
       ical:
@@ -180,8 +192,14 @@ series:
         dtstart: 2021-11-24 18:30:00+01:00
         dtend: 2021-11-24 21:30:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Jan 26, 2022, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program bude upřesněn.– 18:30 Úvodní slovo a novinky ze světa WordPres'
-      og_title: 'WordPress Pivo #8'
+      meta_description: 'Wed, Jan 26, 5:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
+
+
+        📢 Program bude upřesněn.
+
+
+        – 18:30 Úvodní slovo a novinky ze světa Word'
+      og_title: 'WordPress Pivo #8 | Meetup'
       image: https://secure.meetupstatic.com/photos/event/4/f/b/b/600_500180411.jpeg
       url: https://www.meetup.com/naswp-cz/events/282061091/
       ical:
@@ -205,8 +223,12 @@ series:
         dtstart: 2022-01-26 18:30:00+01:00
         dtend: 2022-01-26 21:30:00+01:00
   - meetupcom:
-      meta_description: 'Sat, Feb 26, 2022, 10:00 AM: Již po deváté pro vás připravujeme největší WordPress konferenci v ČR.Rádi se opět uvidíme se všemi, kterým WordPress přirostl k srdci.A je jedno, jestli se v něm teprve r'
-      og_title: WordCamp Praha 2022
+      meta_description: 'Sat, Feb 26, 9:00 AM: Již po deváté pro vás připravujeme největší WordPress konferenci v ČR.
+
+        Rádi se opět uvidíme se všemi, kterým WordPress přirostl k srdci.
+
+        A je jedno, jestli se v něm teprve '
+      og_title: WordCamp Praha 2022 | Meetup
       image: https://secure.meetupstatic.com/photos/event/5/7/e/0/600_500302496.jpeg
       url: https://www.meetup.com/naswp-cz/events/282169930/
       ical:
