--- a/data/sources/pipedrive-prague.yaml
+++ b/data/sources/pipedrive-prague.yaml
@@ -6,8 +6,8 @@ series:
     image: https://secure.meetupstatic.com/photos/event/c/1/b/c/600_499009596.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Sep 8, 2021, 5:00 PM: Most product professionals will have to work with an existing product or a subsection of it. Launching a new product is an experience very few go through. Luckily, these day'
-      og_title: From zero to launch - How the Pipedrive team launched a new product from scratch
+      meta_description: 'Wed, Sep 8, 3:00 PM: Most product professionals will have to work with an existing product or a subsection of it. Launching a new product is an experience very few go through. Luckily, these da'
+      og_title: From zero to launch - How the Pipedrive team launched a new product from scratch | Meetup
       image: https://secure.meetupstatic.com/photos/event/b/6/b/b/600_498526779.jpeg
       url: https://www.meetup.com/pipedrive-talks-prague/events/280460361/
       ical:
@@ -30,8 +30,8 @@ series:
         dtstart: 2021-09-08 17:00:00+02:00
         dtend: 2021-09-08 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Sep 14, 2021, 6:00 PM: GraphQL is already far on the adoption curve. It is slowly becoming mainstream, and we start seeing new products being built primarily on GraphQL instead of REST. Most comp'
-      og_title: 'Backend Meetup: GraphQL at Scale'
+      meta_description: 'Tue, Sep 14, 4:00 PM: GraphQL is already far on the adoption curve. It is slowly becoming mainstream, and we start seeing new products being built primarily on GraphQL instead of REST. Most comp'
+      og_title: 'Backend Meetup: GraphQL at Scale | Meetup'
       image: https://secure.meetupstatic.com/photos/event/8/c/0/6/600_498395846.jpeg
       url: https://www.meetup.com/pipedrive-talks-prague/events/280151778/
       ical:
@@ -105,8 +105,8 @@ series:
         dtstart: 2020-02-25 07:30:00+01:00
         dtend: 2020-02-25 09:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Oct 19, 2021, 6:00 PM: If you want to succeed as a product-led company, you must ensure your teams are `empowered` enough to do the best work they can. As Marty Cagan famously wrote: "Great teams'
-      og_title: 'Product Meetup: Empowered Product Teams'
+      meta_description: 'Tue, Oct 19, 4:00 PM: If you want to succeed as a product-led company, you must ensure your teams are `empowered` enough to do the best work they can. As Marty Cagan famously wrote: "Great teams'
+      og_title: 'Product Meetup: Empowered Product Teams | Meetup'
       image: https://secure.meetupstatic.com/photos/event/6/5/7/0/600_499105968.jpeg
       url: https://www.meetup.com/pipedrive-talks-prague/events/280939384/
       ical:
@@ -130,8 +130,8 @@ series:
         dtstart: 2021-10-19 18:00:00+02:00
         dtend: 2021-10-19 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Nov 16, 2021, 6:00 PM: Microservices are a popular and well-known architectural choice. Over time, best practices regarding implementing and maintaining this architectural style have evolved. In '
-      og_title: 'Backend Meetup: Advanced Microservices'
+      meta_description: 'Tue, Nov 16, 5:00 PM: Microservices are a popular and well-known architectural choice. Over time, best practices regarding implementing and maintaining this architectural style have evolved. In '
+      og_title: 'Backend Meetup: Advanced Microservices | Meetup'
       image: https://secure.meetupstatic.com/photos/event/c/4/a/5/600_500150341.jpeg
       url: https://www.meetup.com/pipedrive-talks-prague/events/281095226/
       ical:
